core/assets/css/button.css
/* ---------------------------
	Basic button styles
   ---------------------------*/

/*
button {
	position:relative;
	background:url('../img/bg-button.png') no-repeat 0 50%;
	cursor:pointer;
	padding:0;
	border:0px none !important;
	color:#000;
}
*/

button {
	color:#000;
	cursor:pointer;
	padding:0;
	background:#ffffff url('../img/bg-button-css3.png') repeat-x 0 50%;

	border: 1px solid #bbbbbb;
	-moz-border-radius: 13px;
	-webkit-border-radius: 13px;
	border-radius: 13px; /* Opera 10.5+, future browsers, and now also Internet Explorer 6+ using IE-CSS3 */
}

button span {
	display:block;
	float:left;
	clear:none;
	margin:0;
	padding:0;
	line-height:20px;
	height:20px;
	border-width:0;
}

button span.icon {
	background-repeat:no-repeat;
	margin:0 2px 0 2px;
}

button span.label {
	margin-right:5px;
	white-space:nowrap;
}

/*
button span.rgt {
	width:10px;
	height:23px;
	line-height:23px;
	background:#fff url(../img/bg-button.png) no-repeat 100% 50% !important;
	position:relative;
	left:3px;
}
*/

button span.rgt {
	display:none;
}

.headerLine button span.rgt {
	margin-top:2px;
	height:23px;
	position:relative;
	background-color:#E7E7E7 !important;
}

/* ---------------------------
	Often used button icons
   ---------------------------*/
button.save .icon {
	background:url(../img/icons.png) no-repeat 0 -209px;
}

button.cancel .icon {
	background:url(../img/icons.png) no-repeat 0 -328px;
}

button.delete .icon {
	background:url(../img/icons.png) no-repeat 0 -360px;
}

button.expandAll .icon {
	background:url(../img/icons.png) no-repeat 0 -600px;
	width:25px;
}


/* ---------------------------
	Center save buttons
   ---------------------------*/
div.typeSaveButton div.fField button {

}

